Version 0.9.8   unreleased

    * Add missing check for proper version of mime-types gem in Cucumber setup.
    * Add explicit version of Rack gem for Cucumber tests, to avoid build failures.

Version 0.9.7   20 Apr 2016

    * Adjust build.gradle so the Java source/target compatibility actually works.

Version 0.9.6   02 Jan 2016

    * Add new JRuby gem dependency on mime-types v2.6.2 to fix Cucumber tests.

Version 0.9.5   02 Sep 2015

    * Convert build process to use CedarJavadoc plugin.
    * Fix CedarJavadoc plugin so it doesn't corrupt images when normalizing line endings.
    * Update CedarAnalysis plugin so clients don't have to define the "analysis" configuration.
    * Apply JavaPlugin from CedarAnalysis plugin, so it's possible to use it independently.
    * Exclude duplicates from generated jar files.

Version 0.9.4   07 Aug 2015

    * Fix runJavancss() to generate a different report XML per the report name.

Version 0.9.3   17 Jul 2015

    * Fix bug in CedarGwtOnGaePluginConvention, where error would crash instead of logging.

Version 0.9.2   14 Jul 2015

    * Improve the server boot process so it is more resilient and provides better warnings.

Version 0.9.1   13 Jul 2015

    * Fix TestSummary output to work properly with new Gradle 2 suite names.
    * Adjust CedarGwtOnGae plugin to work properly with gradle-appengine-plugin.
    * Update file headers to properly reference Gradle 2.5 instead of Gradle 1.7.

Version 0.9.0   13 Jul 2015

    * Initial conversion to Gradle 2, tested with Gradle v2.5.
    * Remove usage of org.gradle.util.Jvm in CedarGwtOnGaePluginConvention.
    * Remove usage of org.gradle.util.Jvm in CedarJavadocPluginConvention.
    * Adjust TestTask constructor to match the new Gradle 2 parent class.
    * Switch from gradle-gae-plugin to gradle-appengine-plugin.

Version 0.8.17  13 Jun 2015

   * Fix Cucumber-related bug where check for Selenium version reports incorrect warning.

Version 0.8.16  09 Jun 2015
